@@ -1,5 +1,10 @@
 2014-06-23  Alejandro Gallardo <alejandro.gallardo@artica.es>
 	
+	* extras/pandoradb_migrate_5.0.x_to_5.1.mysql.sql: Fixed
+	some queries.
+
+2014-06-23  Alejandro Gallardo <alejandro.gallardo@artica.es>
+	
 	* godmode/gis_maps/configure_gis_map.php: Visual changes
 	on the inputs.
 
